@@ -1,5 +1,12 @@
 2017-11-11  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Linux/x86_64.
+	* Makefile.devel (multibuild-linux-x86_64): Enable all build variants.
+	* makemake.in (XCFLAGS): For Linux/x86_64, enable all optimizations
+	except ASM, ARI_ASM, SP_ASM.
+
+2017-11-11  Bruno Haible  <bruno@clisp.org>
+
 	New option --cbcx that includes "make extracheck".
 	* configure: Accept option --cbcx.
 	* Makefile.devel (build-porting*): Use option --cbcx instead of --cbc.
